alguns ajustes do formulario

--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
 
                 <div class="form-group mb-3">
                     <label for="nome" class="form-label">Nome</label>
-                    <input type="text" class="form-control" id="nome" name="nome">
+                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome Completo">
                 </div>
 
                 <div class="form-group mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="email@email.com">
                 </div>
 
                 <div class="form-group mb-3">
                     <label for="telefone" class="form-label">Telefone</label>
-                    <input type="tel" class="form-control" id="telefone" name="telefone">
+                    <input type="tel" class="form-control" id="telefone" name="telefone" placeholder="(xx) x xxxx-xxxx">
                 </div>
 
                 <div class="form-group mb-3">
@@ -159,7 +159,8 @@
 
                 <div class="form-group mb-3">
                     <label for="mensagem" class="form-label">Mensagem</label>
-                    <textarea class="form-control" id="mensagem" name="mensagem" rows="4"></textarea>
+                    <textarea class="form-control" id="mensagem" name="mensagem" rows="4"
+                        placeholder="Escreva a sua mensagem ..."></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-primary d-block mx-auto w-25 mt-4">Enviar</button>
