implementação de animação do carousel e da seção localização

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="#content-contato">Contato</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link mx-lg-2" href="#content-localizacao">Localização</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -130,7 +133,7 @@
 
 
         <section id="content-contato" class="container">
-            <h2 class="text-center mb-4">Formulário de Contato</h2>
+            <h2 class="text-center mb-5">Formulário de Contato</h2>
             <form>
 
                 <div class="form-group mb-3">
@@ -163,8 +166,41 @@
                         placeholder="Escreva a sua mensagem ..."></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary d-block mx-auto w-25 mt-4">Enviar</button>
+                <button type="submit" class="btn btn-primary d-block mx-auto w-25 mt-5">Enviar</button>
             </form>
+        </section>
+
+
+        <section id="content-localizacao">
+            <div class="left-column-loc">
+                <h2>Localização</h2>
+                <p class="phrase">
+                    Venha nos visitar e conheça nossa escola, onde cada criança é acolhida para aprender, explorar e
+                    desenvolver suas habilidades em um ambiente seguro e acolhedor.
+                </p>
+                <p class="address">
+                    AVENIDA GARIBALDI 45
+                    <br>
+                    FEDERAÇÃO SALVADOR BA 40210-750
+                </p>
+                <p class="contact">
+                    (71) 9 9319-8218
+                    <br>
+                    escolapeterpan@hotmail.com
+                </p>
+                <p class="functioning">
+                    HORÁRIO DE FUNCIONAMENTO:
+                    <br>
+                    SEGUNDA A SEXTA DAS 7H30 ÀS 17H30
+                </p>
+            </div>
+            <div class="rigth-column-loc">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7775.34540249517!2d-38.510887!3d-12.9927737!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7160497e527dbf7%3A0xb7b66720b1a977b5!2sEscola%20Piterpan!5e0!3m2!1spt-BR!2sbr!4v1731424006852!5m2!1spt-BR!2sbr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
         </section>
 
     </main>
