implementação de javascript no btn do formulario

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         placeholder="Escreva a sua mensagem ..."></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary d-block mx-auto w-25 mt-5">Enviar</button>
+                <button id="submitButton" class="btn btn-primary d-block mx-auto w-25 mt-5" onclick="simularEnvio()">Enviar</button>
             </form>
         </section>
 
