--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50" tabindex="0">
