--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/img-01.png" class="d-block w-100" alt="Imagem 1">
+                    <img src="img/img-01.png" class="d-block w-100" alt="Imagem 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/img-02.png" class="d-block w-100" alt="Imagem 2">
+                    <img src="img/img-02.png" class="d-block w-100" alt="Imagem 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/img-03.png" class="d-block w-100" alt="Imagem 3">
+                    <img src="img/img-03.png" class="d-block w-100" alt="Imagem 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -216,7 +216,7 @@
 
     <button id="backToTopBtn" onclick="scrollToTop()">Topo</button>
 
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
