--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                 </p>
             </div>
             <div class="rigth-column">
-                <img src="/img/sobre.png" alt="Sobre a escola">
+                <img src="img/sobre.png" alt="Sobre a escola">
             </div>
         </section>
 
 
         <section id="content-service">
             <div class="card shadow-lg border-0 rounded">
-                <img src="/img/basico.jpg" class="card-img-top" alt="Educação Infantil">
+                <img src="img/basico.jpg" class="card-img-top" alt="Educação Infantil">
                 <div class="card-body">
                     <h5 class="card-title text-center text-primary">Educação Infantil</h5>
                     <p class="card-text text-muted text-center">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="card shadow-lg border-0 rounded">
-                <img src="/img/fundamental.jpg" class="card-img-top" alt="Fundamental 1">
+                <img src="img/fundamental.jpg" class="card-img-top" alt="Fundamental 1">
                 <div class="card-body">
                     <h5 class="card-title text-center text-primary">Fundamental I</h5>
                     <p class="card-text text-muted text-center">
